[tool.poetry]
name = "katago-api"
version = "0.1.0"
description = ""
authors = ["Jim Snavely"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
flask = "^3.0.3"
flask-caching = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

